manifests/05-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-samples-operator
  namespace: openshift-cluster-samples-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-samples-operator
  template:
    metadata:
      labels:
        name: cluster-samples-operator
    spec:
      serviceAccountName: cluster-samples-operator
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      containers:
        - name: cluster-samples-operator
          image: docker.io/openshift/origin-cluster-samples-operator:latest
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - cluster-samples-operator
          resources:
            requests:
              cpu: 10m
          imagePullPolicy: Always
