manifests/06-operator-ibm-cloud-managed.yaml
# *** AUTOMATICALLY GENERATED FILE - DO NOT EDIT ***
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    capability.openshift.io/name: openshift-samples
    include.release.openshift.io/ibm-cloud-managed: "true"
  name: cluster-samples-operator
  namespace: openshift-cluster-samples-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-samples-operator
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        name: cluster-samples-operator
    spec:
      containers:
      - args:
        - --config=/var/run/configmaps/samples-operator-config/config.yaml
        command:
        - cluster-samples-operator
        image: quay.io/openshift/origin-cluster-samples-operator:latest
        imagePullPolicy: IfNotPresent
        name: cluster-samples-operator
        ports:
        - containerPort: 60000
          name: metrics
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/secrets
          name: samples-operator-tls
        - mountPath: /var/run/configmaps/samples-operator-config
          name: samples-operator-config
      - args:
        - --namespace=openshift-cluster-samples-operator
        - --process-name=cluster-samples-operator
        - --termination-grace-period=30s
        - --files=/etc/secrets/tls.crt
        - --files=/etc/secrets/tls.key
        - --files=/var/run/configmaps/samples-operator-config/config.yaml
        command:
        - cluster-samples-operator-watch
        - file-watcher-watchdog
        image: quay.io/openshift/origin-cluster-samples-operator:latest
        imagePullPolicy: IfNotPresent
        name: cluster-samples-operator-watch
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/secrets
          name: samples-operator-tls
        - mountPath: /var/run/configmaps/samples-operator-config
          name: samples-operator-config
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cluster-samples-operator
      shareProcessNamespace: true
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      volumes:
      - name: samples-operator-tls
        secret:
          secretName: samples-operator-tls
      - configMap:
          name: samples-operator-config
        name: samples-operator-config
