manifests/06-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-samples-operator
  namespace: openshift-cluster-samples-operator
  annotations:
    capability.openshift.io/name: openshift-samples
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-samples-operator
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
      labels:
        name: cluster-samples-operator
    spec:
      serviceAccountName: cluster-samples-operator
      shareProcessNamespace: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      tolerations:
      - key: node-role.kubernetes.io/master  # Just tolerate NoSchedule taint on master node. If there are other conditions like disk-pressure etc, let's not schedule the control-plane pods onto that node.
        operator: Exists
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
      volumes:
      - name: samples-operator-tls
        secret:
          secretName: samples-operator-tls
      - name: samples-operator-config
        configMap:
          name: samples-operator-config
      containers:
      - name: cluster-samples-operator
        image: quay.io/openshift/origin-cluster-samples-operator:latest
        ports:
        - containerPort: 60000
          name: metrics
        command:
        - cluster-samples-operator
        args:
        - --config=/var/run/configmaps/samples-operator-config/config.yaml
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: samples-operator-tls
          mountPath: /etc/secrets
        - name: samples-operator-config
          mountPath: /var/run/configmaps/samples-operator-config
      - name: cluster-samples-operator-watch
        image: quay.io/openshift/origin-cluster-samples-operator:latest
        command:
        - cluster-samples-operator-watch
        - file-watcher-watchdog
        args:
        - --namespace=openshift-cluster-samples-operator
        - --process-name=cluster-samples-operator
        - --termination-grace-period=30s
        - --files=/etc/secrets/tls.crt
        - --files=/etc/secrets/tls.key
        - --files=/var/run/configmaps/samples-operator-config/config.yaml
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: samples-operator-tls
          mountPath: /etc/secrets
        - name: samples-operator-config
          mountPath: /var/run/configmaps/samples-operator-config
