manifests/07-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-samples-operator
  namespace: openshift-cluster-samples-operator
  annotations:
    config.openshift.io/inject-proxy: "cluster-samples-operator"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-samples-operator
  template:
    metadata:
      labels:
        name: cluster-samples-operator
    spec:
      serviceAccountName: cluster-samples-operator
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - key: node-role.kubernetes.io/master  # Just tolerate NoSchedule taint on master node. If there are other conditions like disk-pressure etc, let's not schedule the control-plane pods onto that node.
        operator: Exists
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
      containers:
      - name: cluster-samples-operator
        image: quay.io/openshift/origin-cluster-samples-operator:latest
        ports:
        - containerPort: 60000
          name: metrics
        command:
        - cluster-samples-operator
        resources:
          requests:
            cpu: 10m
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: trusted-ca
            mountPath: /etc/pki/ca-trust/extracted/pem/
      volumes:
        - name: trusted-ca
          configMap:
            name: trusted-ca
            optional: true
            items:
              - key: ca-bundle.crt
                path: tls-ca-bundle.pem
