manifests/06-metricsservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    service.beta.openshift.io/serving-cert-secret-name: samples-operator-tls
    include.release.openshift.io/single-node-production-edge: "true"
  labels:
    name: cluster-samples-operator
  name: metrics
  namespace: openshift-cluster-samples-operator
spec:
  clusterIP: None
  ports:
  - port: 60000
    protocol: TCP
    targetPort: 60000
  selector:
    name: cluster-samples-operator
